# git-trano

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release-static.yml
src/: main.rs
